# bhs_cadences

./: .gitignore  Makefile  Procfile  README.md  fly.toml  notes.md  pyproject.toml  test.py  wsgi.py
bhs_cadences/: __init__.py  commands.py  models.py  utils.py  views.py
bhs_cadences/static/: styles.css
bhs_cadences/templates/: _view_score.html  about.html  base.html  foo.html  index.html  list.html  search.html  view.html
data/b_bass/: metadata.json
data/b_bass/cymbals/: muse_file.mscz
data/b_bass/full_score/: muse_file.mscz
data/ballard_funk/: metadata.json
data/ballard_funk/snare/: muse_file.mscz
data/c1/: metadata.json
data/c1/full_score/: muse_file.mscz
data/c1/snare/.mscbackup/: .muse_file.mscz~
data/c1/tenors/: muse_file.mscz
data/down_under/: metadata.json
data/down_under/cymbals/: muse_file.mscz
data/down_under/full_score/: muse_file.mscz
data/down_under/snare/.mscbackup/: .muse_file.mscz~
data/topsy/: metadata.json
data/topsy/bass/: muse_file.mscz
data/topsy/full_score/: muse_file.mscz
data/topsy/snare/: muse_file.mscz
tests/: test_bhs_cadences.py
